--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
+    "@angular/cdk": "^7.1.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^7.1.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@auth0/angular-jwt": "^2.0.0",
+    "@kolkov/angular-editor": "^0.13.1",
+    "@sgbj/angular-gist": "^0.3.0",
+    "angular-froala-wysiwyg": "^2.9.1",
     "core-js": "^2.5.4",
+    "ngx-chips": "^2.0.0-beta.0",
+    "ngx-gist": "^1.0.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
